0.2.4
[Alexandr Topilski]
- LevelDB database support http://leveldb.org/
- Info and history for LevelDB
- Update libssh2 sources
- Resolve ssh_address for Redis connection
- SSH default path for private key(~/.ssh/id_rsa) and for public(~/.ssh/id_rsa.pub)
- SSDB update sources, added command support(qpush, qpop, qslice, qclear)
0.1.4 / Jule 29, 2015
- Display db name in console
- Auto open console preference