@@ -3,6 +3,8 @@
 - Update libssh2 sources
 - Resolve ssh_address for Redis connection
 - SSH default path for private key(~/.ssh/id_rsa) and for public(~/.ssh/id_rsa.pub)
+- TTL calculate for key
+- Redis driver code optimization
 
 0.7.4 / Jule 29, 2015
 [Alexandr Topilski]
